[workspace]
resolver = "2"
members = [
#    "server",
    "engine",
    "task_scheduler"
]

[workspace.dependencies]
# External dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "3.0.3"
solana-sdk = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal workspace crates
engine = { path = "engine" }
task_scheduler = { path = "task_scheduler" }

[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
solana-client = { workspace = true }
task_scheduler = { workspace = true }


